# drone-synthetic

./: .dockerignore  .gitignore  README.md  pyproject.toml
configs/: convert.s3.yaml  convert.yaml
docker/: Dockerfile
docs/: RUNBOOK.md
infra/: auto-trigger.tf  batch-iam.tf  batch.tf  ecr.tf  iam.tf  outputs.tf  s3.tf  variables.tf  versions.tf
infra/lambda/: auto_trigger.py
src/dronesynth/: __init__.py  batch.py  cli.py  config.py
src/dronesynth/datagen/: __init__.py  annotations.py  boxes.py  convert.py  pairing.py  qc.py  split.py  yolo.py
src/dronesynth/ingest/: __init__.py  capture.py  manifest.py
src/dronesynth/storage/: __init__.py  backends.py
tests/: test_annotations.py  test_auto_trigger.py  test_batch.py  test_boxes.py  test_capture.py  test_config.py  test_convert.py  test_manifest.py  test_package.py  test_pairing.py  test_qc.py  test_split.py  test_storage.py  test_yolo.py
