[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "drone-synthetic"
version = "0.1.0"
description = "Converts UE5 + EasySynth paired renders (normal + mask) into versioned, QC'd YOLO training datasets, with S3 as the system of record and conversion running on AWS Batch"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.26",
    "opencv-python-headless>=4.8",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[project.scripts]
dronesynth = "dronesynth.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
